components/account/account.style.css
#slantedContainer {
  overflow: hidden;
}

#slanted {
  margin-top: 3px;
  background-color: #303030;
  color: #DEDEDE;
  -webkit-transform: skew(30deg) translate(15px);
  -moz-transform: skew(30deg);
  -o-transform: skew(30deg);
}

#slantedText > * {
  font-size: 25px;
  font-weight: 900;
  line-height: 50px;
  margin: 0px;
  -webkit-transform: skew(-30deg);
  -moz-transform: skew(-30deg);
  -o-transform: skew(-30deg);
}

#displayPic {
  margin:auto;
  height: 130px;
  width: 130px;
  border: 15px solid #303030;
  -webkit-border-radius: 200px;
  -moz-border-radius: 200px;
  -o-border-radius: 200px;
}

#displayPic > * {
  color: #303030;
  height: 130px;
  width: 130px;
  background-color: #DEDEDE;
  -webkit-border-radius: 200px;
  -moz-border-radius: 200px;
  -o-border-radius: 200px;
}

#nameContainer > h2 {
  font-weight: 900;
  letter-spacing: 3px;
  margin-bottom: 0px;
}

#accountInfo * {
  margin: 0px;
  margin-bottom: 5px;
}

#accountInfo h4:nth-child(2) {
  margin-left: 10px;
  font-weight: normal;
}

#accountButtons > .md-button {
  min-width: 100%;
  background-color: #303030;
  letter-spacing: 5px;
  -webkit-border-radius: 0px;
  -moz-border-radius: 0px;
  -o-border-radius: 0px;
}

#accountButtons > .md-button > span {
  top: 1px;
  color: #DEDEDE;
  position: relative;
	font-size: 15px;
}

#copyBtmRight > h1{
  text-align: right;
  font-family: revolution;
  font-size: 30px;
  letter-spacing: 8px;
  margin-bottom: 0px;
}

#copyBtmRight > span{
  text-align: right;
  font-size: 12px;
  font-weight: bold;
}

